[project]
name = "dl-1-bdz-2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "einops>=0.8.2",
    "pandas>=3.0.1",
    "sacrebleu>=2.6.0",
    "sentencepiece>=0.2.1",
    "spacy>=3.8.11",
    "torch>=2.10.0",
    "torchtext>=0.6.0",
    "tqdm>=4.67.3",
    "wandb>=0.25.0",
]
